--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
       <div class="container">
         <h2>Our Features</h2>
 
-        <div class="feat-box">
+        <div class="feat-box" data-aos="fade-right">
           <img src="imgs/programming.svg" alt />
           <h4>Development</h4>
           <p>
@@ -320,7 +320,7 @@
           </p>
         </div>
 
-        <div class="feat-box">
+        <div class="feat-box" data-aos="fade-down">
           <img src="imgs/advertising.svg" alt />
           <h4>Marketing</h4>
           <p>
@@ -329,7 +329,7 @@
           </p>
         </div>
 
-        <div class="feat-box">
+        <div class="feat-box" data-aos="fade-left">
           <img src="imgs/hosting-icon.svg" alt />
           <h4>Hosting</h4>
           <p>
@@ -338,7 +338,7 @@
           </p>
         </div>
 
-        <div class="feat-box">
+        <div class="feat-box" data-aos="fade-right">
           <img src="imgs/mobile-app.svg" alt />
           <h4>Mobile Develope</h4>
           <p>
@@ -347,7 +347,7 @@
           </p>
         </div>
 
-        <div class="feat-box">
+        <div class="feat-box" data-aos="fade-up">
           <img src="imgs/graphic-design.svg" alt />
           <h4>Cloud and Servers</h4>
           <p>
@@ -356,7 +356,7 @@
           </p>
         </div>
 
-        <div class="feat-box">
+        <div class="feat-box" data-aos="fade-left">
           <img src="imgs/web-design.svg" alt />
           <h4>Seo</h4>
           <p>
@@ -373,7 +373,7 @@
       <div class="container">
         <h2>Testimonials</h2>
 
-        <div class="ts-box">
+        <div class="ts-box" data-aos="fade-down">
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt,
             voluptate. Impedit sunt aspernatur animi amet ut.
@@ -385,7 +385,7 @@
           </div>
         </div>
 
-        <div class="ts-box">
+        <div class="ts-box" data-aos="fade-down" data-aos-delay="100">
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt,
             voluptate. Impedit sunt aspernatur animi amet ut.
@@ -397,7 +397,7 @@
           </div>
         </div>
 
-        <div class="ts-box">
+        <div class="ts-box" data-aos="fade-down" data-aos-delay="200">
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt,
             voluptate. Impedit sunt aspernatur animi amet ut.
@@ -419,7 +419,7 @@
         <h2>Contact Us</h2>
 
         <form action>
-          <div class="left">
+          <div class="left" data-aos="fade-right">
             <input type="text" placeholder="Type Your Name" name="username" />
             <input type="text" placeholder="Type Your Phone" name="userPhone" />
             <input
@@ -434,7 +434,7 @@
             />
           </div>
 
-          <div class="right">
+          <div class="right" data-aos="fade-left">
             <textarea
               name="Message"
               id
